* Dec 21 2000 hship

Attempt a few minor optimizations related to PropertyHelper and PropertyBinding.


* Dec 20 2000 hship

Update the documentation.
Make sure the visit object is created only when needed.

* Dec 20 2000 hship

Add the FieldLabel component, used for providing a label for validating text fields.
 
* Dec 19 2000 hship

Fix a typo that broke the Rollover component.

* Dec 19 2000 hship

Slight improvements in efficiency of the ScriptParser.
Fix minor Javadoc mistakes.

* Dec 18 2000 hship

Revisit the ScriptGenerator class, changing the format of the .script file from
home-brew to a fully specified XML document.

* Dec 15 2000 hship

Added the ScriptGenerator (and related classes) and converted the Rollover component
to use it.

* Dec 14 2000 hship

LOts of tweaks and cleanups to improve serialization.
Added the DataSqueezer and related classes that convert objects to Strings and back.
Added the Decorator class, used to match classes against adaptor objects.
Added some missing copyrights to various files.
Change the Inspector's "Properties" tab to show the serialized application with 32 bytes per line.
Changes ApplicationSpecification to store default page specification in a static variable, shared by all instances.

* Dec 13 2000 hship

Update the Tapestry Designer's Guide, to describe the new validating text fields.

* Dec 12 2000 hship

Fix some Javadoc errors in the new classes.

* Dec 12 2000 hship

Introduce IValidatingTextField and some implementations (ValidatingTextField,
DateField and IntegerField).
Remove many now unnecessary Makefiles from various packages.

* Dec 11 2000 hship

Split the application into the application object and the visit object.  
The visit object contains the server side state.
Remove the old constructors for AbstractComponent and BasePage.

* Nov 29 2000 hship

Update the Inspector to show the size and bytes of the serialized application object.

* Nov 29 2000 hship
